Closed Bug 1691502 Opened 5 years ago Closed 5 years ago

Occasionally invalidateLayoutTableCache is called on an object that doesn't support it

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: morgan, Assigned: morgan)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

Looking at this crash dump: https://crash-stats.mozilla.org/report/index/43e02707-f5bb-41bc-ad26-20a6e0210208

we have a lot of 'invalid selector sent to instance' exceptions. we should fix that. I think this is an outline problem.

Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ca1de7bf8a6 Don't attempt to invalidate table cache on outlines r=eeejay
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Priority: P3 → P1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: