Bug 1691502: Don't attempt to invalidate table cache on outlines r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D104432